# fastirc

./: .gitignore  LICENSE  Makefile  README.md  Setup.lhs  fastirc.cabal
Network/: FastIRC.hs
Network/FastIRC/: Raw.hs
test/: Bench.hs  Props.hs  TestProg.hs
test/Props/: Raw.hs  Types.hs
