Name:          fastirc
Version:       0.3.0
Category:      Network
Synopsis:      Fast IRC protocol implementation
Maintainer:    Ertugrul Söylemez <es@ertes.de>
Author:        Ertugrul Söylemez <es@ertes.de>
Copyright:     (c) 2013 Ertugrul Söylemez
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.10
Extra-source-files: README.md
Description:
    Fast IRC protocol implementation.

Source-repository head
    type:     git
    location: git://github.com/ertes/continue.git

Library
    Build-depends:
        attoparsec >= 0.10 && < 1,
        base       >= 4.5  && < 5,
        bytestring >= 0.10 && < 1
    Default-language: Haskell2010
    Default-extensions:
        DeriveDataTypeable
    GHC-Options: -W
    Exposed-modules:
        Network.FastIRC
        Network.FastIRC.Raw

Test-suite tests
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        attoparsec,
        bytestring,
        fastirc,
        QuickCheck,
        test-framework,
        test-framework-quickcheck2,
        test-framework-th
    Default-language: Haskell2010
    Default-extensions:
        OverloadedStrings
        TemplateHaskell
        ViewPatterns
    GHC-Options: -W -threaded -rtsopts -with-rtsopts=-N
    Hs-source-dirs: test
    Main-is: Props.hs
    Other-modules:
        Props.Raw
        Props.Types

Benchmark bench
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        criterion,
        fastirc
    Default-language: Haskell2010
    Default-extensions:
    GHC-Options: -W -O2 -threaded -rtsopts -with-rtsopts=-N
    Hs-source-dirs: test
    Main-is: Bench.hs
