Name:          fastirc
Version:       0.3.0
Category:      Network
Synopsis:      Fast IRC protocol implementation
Maintainer:    Ertugrul Söylemez <es@ertes.de>
Author:        Ertugrul Söylemez <es@ertes.de>
Copyright:     (c) 2013 Ertugrul Söylemez
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.10
Extra-source-files: README.md
Description:
    Fast IRC protocol implementation.

Source-repository head
    type:     git
    location: git://github.com/ertes/continue.git

Library
    Build-depends:
        attoparsec >= 0.10 && < 1,
        base       >= 4.5  && < 5,
        bytestring >= 0.10 && < 1,
        deepseq    >= 1.3  && < 2,
        mtl        >= 2.0  && < 3,
        pipes      >= 3.1  && < 4
    Default-language: Haskell2010
    Default-extensions:
        DeriveDataTypeable
        ScopedTypeVariables
    GHC-Options: -W
    Exposed-modules:
        Network.FastIRC
        Network.FastIRC.Raw

Test-suite tests
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        bytestring,
        fastirc,
        HUnit,
        mtl,
        pipes,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        test-framework-th
    Default-language: Haskell2010
    Default-extensions:
        OverloadedStrings
        TemplateHaskell
        ViewPatterns
    GHC-Options: -W -threaded -rtsopts -with-rtsopts=-N
    Hs-source-dirs: test
    Main-is: Props.hs
    Other-modules:
        Props.Raw
        Props.Types

Test-suite testprog
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        bytestring,
        fastirc,
        mtl,
        pipes
    Default-language: Haskell2010
    Default-extensions:
        OverloadedStrings
    GHC-Options: -W -threaded -rtsopts
    Hs-source-dirs: test
    Main-is: TestProg.hs

Benchmark bench
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        bytestring,
        cprng-aes,
        criterion,
        deepseq,
        fastirc,
        mtl,
        pipes,
        random
    Default-language: Haskell2010
    Default-extensions:
        OverloadedStrings
    GHC-Options: -W -threaded -rtsopts
    Hs-source-dirs: test
    Main-is: Bench.hs
